use lowercase for link names

--- a/source/_includes/article/links.html
+++ b/source/_includes/article/links.html
@@ -1,11 +1,11 @@
 <ul id="project-links">
   {% if page.web %}
-    <li><a href="{{ page.web }}">Download</a></li>
+    <li><a href="{{ page.web }}">source code</a></li>
   {% endif %}
   {% if page.video %}
-    <li><a href="{{ page.video }}">Video</a></li>
+    <li><a href="{{ page.video }}">video</a></li>
   {% endif %}
   {% if page.paper %}
-    <li><a href="{{ page.paper }}">Paper</a></li>
+    <li><a href="{{ page.paper }}">paper</a></li>
   {% endif %}
 </ul>
