--- a/source/_includes/project.html
+++ b/source/_includes/project.html
@@ -1,35 +1,37 @@
-{% unless page.no_header %}
-  <header>
-    {% if index %}
-      <h1 class="entry-title"><a href="{{ root_url }}{{ post.url }}">{% if site.titlecase %}{{ proj.title | titlecase }}{% else %}{{ proj.title }}{% endif %}</a></h1>
-    {% else %}
-      <h1 class="entry-title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
-    {% endif %}
-    {% unless page.meta == false %}
-      <p class="meta">
-        {% include post/date.html %}{{ time }}
-        {% if site.disqus_short_name and page.comments != false and post.comments != false and site.disqus_show_comment_count == true %}
-         | <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#disqus_thread">Comments</a>
-        {% endif %}
-      </p>
-    {% endunless %}
-    {% if page.teaser %}
+{% if index %}
+  <div class="project-entry">
+    <h1 class="entry-title"><a href="{{ root_url }}{{ proj.url }}">{% if site.titlecase %}{{ proj.title | titlecase }}{% else %}{{ proj.title }}{% endif %}</a></h1>
+    {% if proj.teaser %}
       <div class="teaser">
-        <img src="{{ root_url }}/images/{{ page.teaser }}" />
+        <img src="{{ root_url }}/images/{{ proj.teaser }}" />
       </div>
     {% endif %}
-  </header>
-{% endunless %}
-{% if index %}
-  <div class="entry-content">{{ content | excerpt }}</div>
-  {% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
-  {% if excerpted == 'true' %}
-    <footer>
-      <a rel="full-article" href="{{ root_url }}{{ proj.url }}">{{ site.excerpt_link }}</a>
-    </footer>
-  {% endif %}
+    <div class="entry-content">{{ content | excerpt }}</div>
+    {% include project/links.html %}
+  </div>
 {% else %}
+  {% unless page.no_header %}
+    <header>
+      {% if index %}
+      {% else %}
+        <h1 class="entry-title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
+      {% endif %}
+      {% unless page.meta == false %}
+        <p class="meta">
+          {% include post/date.html %}{{ time }}
+          {% if site.disqus_short_name and page.comments != false and post.comments != false and site.disqus_show_comment_count == true %}
+           | <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#disqus_thread">Comments</a>
+          {% endif %}
+        </p>
+      {% endunless %}
+      {% if page.teaser %}
+        <div class="teaser">
+          <img src="{{ root_url }}/images/{{ page.teaser }}" />
+        </div>
+      {% endif %}
       {% include project/links.html %}
+    </header>
+  {% endunless %}
   <div class="entry-content">{{ content }}</div>
   {% if page.citation %}
     <div class="citation">
