only call source code link "source"

--- a/source/_includes/project/links.html
+++ b/source/_includes/project/links.html
@@ -5,7 +5,7 @@
 {% endif %}
 <ul id="project-links">
   {% if x.web %}
-    <li><a href="{{ x.web }}">source code</a></li>
+    <li><a href="{{ x.web }}">source</a></li>
   {% endif %}
   {% if x.video %}
     <li><a href="{{ x.video }}">video</a></li>
