--- a/source/_includes/project/links.html
+++ b/source/_includes/project/links.html
@@ -3,7 +3,7 @@
 {% else %}
   {% assign x=page %}
 {% endif %}
-<ul id="project-links">
+<ul class="project-links">
   {% if x.web %}
     <li><a href="{{ x.web }}">source</a></li>
   {% endif %}
