--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -5,6 +5,10 @@
 
 body { font-size: 1em; }
 
+a { color: #000000; }
+a:visited { color: #000000; }
+//a:focus { color: #000000; }
+
 /* ----- header ----- */
 
 body > header {
@@ -38,5 +42,27 @@ article > h1, h2, h3 {
 
 article > h1 {
   font-size: 2em;
+}
+
+/* ----- project list ----- */
+
+.project-entry img {
+  float: left;
+  width: 200px;
+}
+
+.project-entry .entry-content {
+  float: right;
+  width: 400px;
+  margin-left: 10px;
+}
+
+.project-links {
+  margin-left: 0em;
+}
+
+.project-links li {
+  display: inline;
+  list-style: none;
 }
 
