add summary section

--- a/source/_includes/project.html
+++ b/source/_includes/project.html
@@ -7,7 +7,7 @@
       </div>
     {% endif %}
     <div class="entry-content">
-      {{ content | excerpt }}
+      {{ proj.summary }}
       {% include project/links.html %}
     </div>
   </div>
