--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -9,6 +9,11 @@ a { color: #000000; }
 a:visited { color: #000000; }
 //a:focus { color: #000000; }
 
+img {
+  float: left;
+  margin-right: 0.8em;
+}
+
 /* ----- header ----- */
 
 body > header {
@@ -18,10 +23,7 @@ body > header {
 
 body > header h2 {
   color: #ffffff;
-  //text-transform: uppercase;
-  //font-variant: small-caps;
   font-size: 0.8em;
-  //font-style: italic;
 }
 
 /* ----- nav ----- */
@@ -36,8 +38,8 @@ body > nav {
 
 article > h1, h2, h3 {
   color: #4b8749;
-  //text-transform: uppercase;
-  //font-variant: small-caps;
+  clear: both;
+  padding-top: 0.3em;
 }
 
 article > h1 {
