--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -67,6 +67,7 @@ $projRightCol: 400px;
 
 .project-entry .teaser img {
   width: $projLeftCol;
+  margin-right: 0em;
 }
 
 .project-entry .teaser a {
@@ -104,5 +105,26 @@ $projRightCol: 400px;
 
 .project-links li:after {
   content: " | ";
+}
+
+/* ----- project entry ----- */
+
+.hentry .entry-title {
+  margin-bottom: 0.3em;
+}
+
+.hentry .teaser img {
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.hentry header .project-links {
+  //width: 100%;
+  //margin-left: auto;
+  //margin-right: auto;
+  text-align: center;
+  margin-bottom: 0.5em;
 }
 
