--- a/source/_layouts/project.html
+++ b/source/_layouts/project.html
@@ -9,6 +9,7 @@ single: true
   <footer>
     <p class="meta">
       {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %}
+      {% include post/categories.html %}
     </p>
     {% unless page.sharing == false %}
       {% include post/sharing.html %}
