--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -9,10 +9,18 @@ a { color: #000000; }
 a:visited { color: #000000; }
 //a:focus { color: #000000; }
 
-img {
+img.inline {
   float: left;
   margin-right: 0.8em;
 }
+
+img.block {
+  float: none;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 /* ----- header ----- */
 
