--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -2,6 +2,7 @@
 pageable: true
 per_page: 10
 ---
+
 <% if paginate && num_pages > 1 %>
   <p>Page <%= page_number %> of <%= num_pages %></p>
 
@@ -11,10 +12,18 @@ per_page: 10
 <% end %>
 
 <% page_articles.each_with_index do |article, i| %>
-  <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
-  <!-- use article.summary(250) if you have Nokogiri available to show just
-       the first 250 characters -->
-  <%= article.body %>
+  <article>
+    <h3><%= link_to article.title, article %></h3>
+    <h6><%= article.date.strftime('%b%e') %></h6>
+ 
+    <!-- use article.summary(250) if you have Nokogiri available to show just
+         the first 250 characters -->
+    <%= article.body %>
+
+  </article>
+
+  <hr />
+
 <% end %>
 
 <% if paginate %>
