--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -1,4 +1,5 @@
 ---
+layout: layout
 pageable: true
 per_page: 10
 ---
@@ -18,7 +19,8 @@ per_page: 10
  
     <!-- use article.summary(250) if you have Nokogiri available to show just
          the first 250 characters -->
-    <%= article.body %>
+    <%= article.summary %>
+    <%= link_to "Read more...", article %>
 
   </article>
 
