--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -15,7 +15,7 @@ per_page: 10
 <% page_articles.each_with_index do |article, i| %>
   <article>
     <h3><%= link_to article.title, article %></h3>
-    <h6><%= article.date.strftime('%b%e') %></h6>
+    <h6><%= article.date.strftime('%b %e, %Y') %></h6>
  
     <!-- use article.summary(250) if you have Nokogiri available to show just
          the first 250 characters -->
