more style updates

--- a/source/_project_links.erb
+++ b/source/_project_links.erb
@@ -1,13 +1,13 @@
 
-<ul class="button-group">
+<ul class="project-links">
   <% if proj.source %>
-    <li><%= link_to 'source', proj.source, :class => 'small button' %></li>
+    <li><%= link_to 'source', proj.source, :class => 'link' %></li>
   <% end %>
   <% if proj.video %>
-    <li><%= link_to 'video', proj.video, :class => 'small button' %></li>
+    <li><%= link_to 'video', proj.video, :class => 'link' %></li>
   <% end %>
   <% if proj.paper %>
-    <li><%= link_to 'paper', proj.paper, :class => 'small button' %></li>
+    <li><%= link_to 'paper', proj.paper, :class => 'link' %></li>
   <% end %>
 </ul>
 
