--- a/source/stylesheets/_settings.scss
+++ b/source/stylesheets/_settings.scss
@@ -4,7 +4,8 @@
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
 // for compatibility with browser-based text zoom or user-set defaults.
-$base-font-size: 100% !default;
+//$base-font-size: 100% !default;
+$base-font-size: 14px;
 
 // $base-line-height is 24px while $base-font-size is 16px
 // $base-line-height: 150%;
@@ -14,7 +15,8 @@ $base-font-size: 100% !default;
 // Since the typical default browser font-size is 16px, that makes the calculation for grid size.
 // If you want your base font-size to be a different size and not have it effect grid size too,
 // set the value of $em-base to $base-font-size ($em-base: $base-font-size;)
-$em-base: 16px !default;
+//$em-base: 16px !default;
+$em-base: $base-font-size;
 
 // It strips the unit of measure and returns it
 @function strip-unit($num) {
@@ -79,7 +81,8 @@ $default-float: left;
 
 // Colors
 
-// $primary-color: #2ba6cb;
+$ttw-green: rgb(75, 135, 73);
+$primary-color: $ttw-green;
 // $secondary-color: #e9e9e9;
 // $alert-color: #c60f13;
 // $success-color: #5da423;
@@ -183,12 +186,12 @@ $default-float: left;
 
 // Control header font sizes
 
-// $h1-font-size: em-calc(44);
-// $h2-font-size: em-calc(37);
-// $h3-font-size: em-calc(27);
-// $h4-font-size: em-calc(23);
-// $h5-font-size: em-calc(18);
-// $h6-font-size: 1em;
+$h1-font-size: em-calc(36);
+$h2-font-size: em-calc(35);
+$h3-font-size: em-calc(28);
+$h4-font-size: em-calc(24);
+$h5-font-size: em-calc(18);
+$h6-font-size: em-calc(15);
 
 // Control how subheaders are styled.
 
@@ -205,9 +208,9 @@ $default-float: left;
 
 // Style paragraphs
 
-// $paragraph-font-family: inherit;
-// $paragraph-font-weight: normal;
-// $paragraph-font-size: 1em;
+$paragraph-font-family: inherit;
+$paragraph-font-weight: normal;
+$paragraph-font-size: 1em;
 // $paragraph-line-height: 1.6;
 // $paragraph-margin-bottom: em-calc(20);
 // $paragraph-aside-font-size: em-calc(14);
@@ -1081,13 +1084,13 @@ $default-float: left;
 
 // We use this to control padding.
 
-// $side-nav-padding: em-calc(14 0);
+$side-nav-padding: em-calc(0 0);
 
 // We use these to control list styles.
 
 // $side-nav-list-type: none;
 // $side-nav-list-position: inside;
-// $side-nav-list-margin: em-calc(0 0 7 0);
+$side-nav-list-margin: em-calc(0 0 0 0);
 
 // We use these to control link styles.
 
@@ -1323,3 +1326,8 @@ $default-float: left;
 
 // $topbar-sticky-class: ".sticky";
 // $topbar-arrows: true; //Set false to remove the triangle icon from the menu item
+
+// The title and main nav bar link size
+$title-font-size: em-calc(24);
+$subtitle-and-nav-font-size: em-calc(18);
+
