--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -7,6 +7,9 @@
 // Comment out this import if you are customizing you imports below
 @import "foundation";
 
+// The title area processing
+@import "title";
+
 // My custom stuff
 @import "custom";
 
