better name for vda group

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -21,7 +21,7 @@
           %h1.title= link_to 'Tom Torsney-Weir', '/'
           %h2.position PhD student
           %ul.address
-            %li VDA lab
+            %li VDA research group
             %li Faculty of Computer Science
             %li University of Vienna
             %li Währingerstrasse 29/3.34
