--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -2,15 +2,15 @@
 layout: page
 ---
 
-%h2 Research interests
+%div.panel
+  %h2 Research interests
 
-I am interested in using visualization techniques along with statistical
-modeling in order to perform optimization in high-dimensional spaces.
+  I am interested in using visualization techniques along with statistical
+  modeling in order to perform optimization in high-dimensional spaces.
 
-%ul
-  %li Visualization
-  %li Computer Graphics
-  %li Machine Learning
-
+  %ul
+    %li Visualization
+    %li Computer Graphics
+    %li Machine Learning
 
 
