--- a/source/layout.haml
+++ b/source/layout.haml
@@ -12,6 +12,12 @@
     = stylesheet_link_tag 'site'
     = javascript_include_tag 'vendor/custom.modernizr'
 
+    -#= stylesheet_link_tag 'highlight.js/foundation'
+    -#= javascript_include_tag 'vendor/highlight.pack.js'
+    -#:javascript
+      -#hljs.tabReplace = '  ';
+      -#hljs.initHighlightingOnLoad();
+
   %body
 
     %div.row
