--- a/source/layout.haml
+++ b/source/layout.haml
@@ -12,6 +12,8 @@
     = stylesheet_link_tag 'site'
     = javascript_include_tag 'vendor/custom.modernizr'
 
+    = stylesheet_link_tag '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'
+
     -#= stylesheet_link_tag 'highlight.js/foundation'
     -#= javascript_include_tag 'vendor/highlight.pack.js'
     -#:javascript
@@ -43,6 +45,9 @@
               %li= link_to 'CV',       '/cv.html'
               %li= link_to 'Contact',  '/contact.html'
               %li= link_to 'About',    '/about.html'
+          %hr
+          = partial 'social'
+
  
 
       %div.large-9.columns{:id => "content", :role => "content"}= yield
