remove contact link for now

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -43,7 +43,7 @@
               %li= link_to 'Projects', '/projects'
               %li= link_to 'Blog',     '/blog'
               %li= link_to 'CV',       '/cv.html'
-              %li= link_to 'Contact',  '/contact.html'
+              -#%li= link_to 'Contact',  '/contact.html'
               %li= link_to 'About',    '/about.html'
           %hr
           = partial 'social'
