--- a/source/layout.haml
+++ b/source/layout.haml
@@ -6,13 +6,16 @@
   %head
     %meta{:charset => "utf-8"}
     %meta{:name => "viewport", :content => "width=device-width"}
-    -#%title Tom Torsney-Weir
+    %title Tom Torsney-Weir
     %title= data.page.title
   
     = stylesheet_link_tag 'site'
     = javascript_include_tag 'vendor/custom.modernizr'
 
     = stylesheet_link_tag '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'
+
+    / google analytics
+    = partial 'google_analytics'
 
     -#= stylesheet_link_tag 'highlight.js/foundation'
     -#= javascript_include_tag 'vendor/highlight.pack.js'
@@ -33,7 +36,7 @@
             %li Faculty of Computer Science
             %li University of Vienna
             %li Währingerstrasse 29/3.34
-            %li 1020 Wien, Austria
+            %li 1090 Wien, Austria
 
           %hr
           -#%section
