--- a/source/blog/index.html.haml
+++ b/source/blog/index.html.haml
@@ -18,7 +18,7 @@ per_page: 10
 
 - page_articles.each_with_index do |article, i|
   %article
-    %h3= link_to article.title, article
+    %h2.article-title= link_to article.title, article
     %h6= article.date.strftime('%b %e, %Y')
  
     = article.summary
