--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -20,21 +20,31 @@ body > div.row:first-of-type {
   padding-top: 1em;
 }
 
-// Custom taglist processing
-.taglist {
-  display: inline;
-  list-style: none;
+.comments {
+  margin-top: 2em;
+}
 
-  .tag {
-    display:inline;
+.byline {
+  @include grid-row;
+
+  .date {
+    display: inline;
   }
 
-  .tag:last-child:after {
-    content: "";
-  }
+  // Custom taglist processing
+  .taglist {
+    @extend .button-group;
+    @extend .right;
+    display: inline;
+    margin: 0 !important;
   
-  .tag:after {
-    content: ", ";
+    .tag {
+      @extend .button;
+      @extend .tiny;
+      a {
+        color: white;
+      }
+    }
   }
 }
 
