--- a/source/layout.haml
+++ b/source/layout.haml
@@ -17,6 +17,8 @@
     / google analytics
     = partial 'google_analytics'
 
+    = stylesheet_link_tag 'prism.js/prism.default'
+    = javascript_include_tag 'vendor/prism.js/prism'
     -#= stylesheet_link_tag 'highlight.js/foundation'
     -#= javascript_include_tag 'vendor/highlight.pack.js'
     -#:javascript
