solarized syntax highlighting done

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -17,7 +17,7 @@
     / google analytics
     = partial 'google_analytics'
 
-    = stylesheet_link_tag 'prism.js/prism.default'
+    -#= stylesheet_link_tag 'prism.js/prism.default'
     = javascript_include_tag 'vendor/prism.js/prism'
     -#= stylesheet_link_tag 'highlight.js/foundation'
     -#= javascript_include_tag 'vendor/highlight.pack.js'
