--- a/source/stylesheets/_settings.scss
+++ b/source/stylesheets/_settings.scss
@@ -1331,3 +1331,6 @@ $side-nav-list-margin: em-calc(0 0 0 0);
 $title-font-size: em-calc(24);
 $subtitle-and-nav-font-size: em-calc(18);
 
+// Solarized settings
+$solarized-theme: light;
+
