--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -10,6 +10,9 @@
 // The title area processing
 @import "title";
 
+// Syntax highlighting
+@import "syntax";
+
 // My custom stuff
 @import "custom";
 
