--- a/source/stylesheets/_title.scss
+++ b/source/stylesheets/_title.scss
@@ -7,6 +7,9 @@
   .title {
     @extend h1;
     font-size: $title-font-size;
+    @media #{$screen} and (max-width:"#{$small-screen}") {
+      display: inline;
+    }
   }
   .position {
     @extend .subheader;
@@ -17,9 +20,22 @@
     list-style: none;
   }
 
-  nav .menu {
-    @include side-nav;
-    font-size: $subtitle-and-nav-font-size;
+  nav {
+    @media #{$screen} and (max-width:"#{$small-screen}") {
+      display: inline;
+    }
+
+    .menu-button {
+      @include button;
+      @include dropdown-button(small, #fff, false);
+      @extend .tiny;
+      @extend .right;
+    }
+
+    .menu {
+      @include side-nav;
+      font-size: $subtitle-and-nav-font-size;
+    }
   }
 }
 
