--- a/source/_project_summary.haml
+++ b/source/_project_summary.haml
@@ -2,9 +2,9 @@
 %article.row
   %div.large-3.columns
     - if proj.data.teaser
-      = link_to image_tag(proj.data.teaser), proj.path
+      = link_to image_tag(proj.data.teaser), proj
   %dev.large-9.columns
-    %h3= link_to proj.data.title, proj.path
+    %h3= link_to proj.data.title, proj
     = proj.data.summary
     = partial "project_links", :locals => {:proj => proj.data}
 
