update main links

--- a/source/_site_nav.haml
+++ b/source/_site_nav.haml
@@ -1,9 +1,8 @@
 
-- links = [['Projects', '/projects'], 
+- links = [['About', '/about.html'],
+           ['Projects', '/projects'], 
            ['Blog', '/blog'], 
-           ['CV', '/cv.html'],
-           ['Contact', '/contact.html'],
-           ['About', '/about.html']]
+           ['CV', '/cv.html']]
 
 %nav.site-nav
   %div.hide-for-medium-up
