--- a/source/blog/index.html.haml
+++ b/source/blog/index.html.haml
@@ -19,7 +19,8 @@ per_page: 10
 - page_articles.each_with_index do |article, i|
   %article
     %h2.article-title= link_to article.title, article
-    %h6= article.date.strftime('%b %e, %Y')
+    %h6
+      %time= article.date.strftime('%b %e, %Y')
  
     = article.summary
     = link_to "Read more...", article
