--- a/source/layout.haml
+++ b/source/layout.haml
@@ -6,8 +6,12 @@
   %head
     %meta{:charset => "utf-8"}
     %meta{:name => "viewport", :content => "width=device-width"}
-    %title Tom Torsney-Weir
-    %title= data.page.title
+    -#%title Tom Torsney-Weir
+    %title 
+      - if current_page.data.title 
+        = current_page.data.title
+        = " - "
+      TomTorsneyWeir.com
   
     = stylesheet_link_tag 'site'
     = javascript_include_tag 'vendor/custom.modernizr'
@@ -22,11 +26,6 @@
 
     -#= stylesheet_link_tag 'prism.js/prism.default'
     = javascript_include_tag 'vendor/prism.js/prism'
-    -#= stylesheet_link_tag 'highlight.js/foundation'
-    -#= javascript_include_tag 'vendor/highlight.pack.js'
-    -#:javascript
-      -#hljs.tabReplace = '  ';
-      -#hljs.initHighlightingOnLoad();
 
   %body
 
@@ -62,6 +61,12 @@
       %div.large-12.columns
         %hr
         %p &copy; Copyright Tom Torsney-Weir
+        -#
+          %p
+          Built with
+          = link_to 'Middleman', 'http://middlemanapp.com'
+          and
+          = link_to 'Foundation', 'http://foundation.zurb.com'
 
     -#= partial 'foundation'
     :javascript
