--- a/source/stylesheets/_syntax.scss
+++ b/source/stylesheets/_syntax.scss
@@ -1,99 +1,88 @@
-@import "solarized";
+/* Pretty printing styles. Used with prettify.js.
+ *
+ * Name:	Stanley Ng
+ * Email: 	stanleyhlng@googlegroups.com
+ * 
+ * Credits:
+ * https://github.com/chriskempson/tomorrow-theme
+ *
+ * Modified for sass
+ */
 
 code {
-  background: $solarized-base03;
-  border: 1px solid darken($solarized-base02, 5);
-  color: $solarized-base1;
+  background-color: #ffffff;
+  color: #4d4d4c;
+  border: 1px solid #E1E1E8;
   padding-left: 0.25em;
   padding-right: 0.25em;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-pre {
-  background: $solarized-base03;
-  border: 1px solid darken($solarized-base02, 5);
-  color: $solarized-base1;
-  overflow: auto;
-  padding-left: 0.25em;
-  padding-right: 0.25em;
+pre.prettyprint {
+
+  /* Put a border around prettyprinted code snippets. */
+  background-color: #ffffff;
+  padding: 10px;
+  border: 1px solid #E1E1E8;
+  
+  /* Specify class=linenums on a pre to get line numbering */
+  ol.linenums {
+    color: #8e908c;
+    margin: 0 0 0 40px; }
+  
+  ol.linenums li {
+    line-height: 18px;
+    padding-left: 12px; }
 
   code {
-    color: $solarized-base1;
-    overflow: auto;
     border: none;
     padding: 0;
 
-    // Mappings for all the prism.js classes
-    .token.comment {
-      color: $solarized-base01 !important; 
-      font-style: italic !important;
-    }
-    .token.prolog {
-      color: $solarized-base01 !important; 
-      font-style: italic !important;
-    }
-    .token.doctype {
-      color: $solarized-base01 !important; 
-      font-style: italic !important;
-    }
-    .token.cdata {
-      color: $solarized-base01 !important; 
-      font-style: italic !important;
-    }
-    .token.class-name {
-      color: $solarized-magenta !important;
-    }
-    .token.punctuation {
-      color: $solarized-base1;
-    }
-    .token.boolean {
-      color: $solarized-green !important;
-      font-weight: bold !important;
-    }
-    .token.number {
-      color: $solarized-cyan !important;
-    }
-    .token.constant {
-      color: $solarized-yellow !important;
-    }
-    .token.function {
-      color: $solarized-blue !important;
-      font-weight: bold !important;
-    }
-    .token.string {
-      color: $solarized-cyan !important;
-    }
-    .token.builtin {
-      color: $solarized-yellow !important;
-    }
-    .token.operator {
-      color: $solarized-base1 !important;
-      font-weight: bold !important;
-    }
-    .token.variable {
-      color: $solarized-blue !important;
-    }
-    .token.keyword {
-      color: $solarized-orange !important;
-      font-weight: bold !important;
-    }
-    .token.regex {
-      color: $solarized-cyan !important;
-    }
-    .token.important {
-      color: $solarized-base1 !important;
-      font-weight: bold !important;
-    }
-
-    .token.property {}
-    .token.tag {}
-    .token.symbol {}
-    .token.selector {}
-    .token.attr-name {}
-    .token.entity {}
-    .token.url {}
-    .token.atrule {}
-    .token.attr-value {}
-    .token.entity {}
+    .pln {
+      color: #4d4d4c; }
+    
+    .str {
+      color: #718c00; }
+    
+    .kwd {
+      color: #8959a8; }
+    
+    .com {
+      color: #8e908c;
+      font-style: italic; }
+    
+    .typ {
+      color: #f5871f; }
+    
+    .lit {
+      color: #eab700; }
+    
+    .pun {
+      color: #4d4d4c; }
+    
+    .opn {
+      color: #4d4d4c; }
+    
+    .clo {
+      color: #4d4d4c; }
+    
+    .tag {
+      color: #c82829; }
+    
+    .atn {
+      color: #eab700; }
+    
+    .atv {
+      color: #3e999f; }
+    
+    .dec {
+      color: #f5871f; }
+    
+    .var {
+      color: #c82829; }
+    
+    .fun {
+      color: #c82829; }
   }
 }
-
