--- a/source/stylesheets/_syntax.scss
+++ b/source/stylesheets/_syntax.scss
@@ -9,20 +9,25 @@
  * Modified for sass
  */
 
-code {
-  background-color: #ffffff;
-  color: #4d4d4c;
-  border: 1px solid #E1E1E8;
-  padding-left: 0.25em;
-  padding-right: 0.25em;
-  padding-top: 0;
-  padding-bottom: 0;
+$code-bg-color: #ffffff;
+$code-base-color: #4d4d4c;
+
+p {
+  code {
+    background-color: $code-bg-color;
+    color: $code-base-color;
+    border: 1px solid #E1E1E8;
+    padding-left: 0.25em;
+    padding-right: 0.25em;
+    padding-top: 0.25em;
+    padding-bottom: 0;
+  }
 }
 
 pre.prettyprint {
 
   /* Put a border around prettyprinted code snippets. */
-  background-color: #ffffff;
+  background-color: $code-bg-color;
   padding: 10px;
   border: 1px solid #E1E1E8;
   
@@ -36,11 +41,12 @@ pre.prettyprint {
     padding-left: 12px; }
 
   code {
-    border: none;
-    padding: 0;
+    //border: none;
+    //padding: 0;
 
     .pln {
-      color: #4d4d4c; }
+      color: $code-base-color;
+    }
     
     .str {
       color: #718c00; }
