add social links

--- a/source/_social.haml
+++ b/source/_social.haml
@@ -1,23 +1,23 @@
 
 %ul.sociallist.fa-lg
   %li
-    = link_to 'mailto:thomas.torsney-weir@univie.ac.at' do
+    = link_to email_url do
       %i.fa.fa-envelope
       -#Email
   %li
-    = link_to 'https://twitter.com/gabysbrain' do
+    = link_to twitter_url do
       %i.fa.fa-twitter
       -#Twitter
   %li
-    = link_to 'https://www.facebook.com/torsneyt' do
+    = link_to facebook_url do
       %i.fa.fa-facebook
       -#Facebook
   %li
-    = link_to 'https://foursquare.com/gabysbrain' do
+    = link_to foursquare_url do
       %i.fa.fa-foursquare
       -#foursquare
   %li
-    = link_to 'https://github.com/torsneyt' do
+    = link_to github_url do
       %i.fa.fa-github
       -#Github
   %li
