move address to separate location

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -36,12 +36,7 @@
           %h1.title= link_to 'Tom Torsney-Weir', '/'
           %div.hide-for-small
             %h2.position PhD student
-            %ul.address
-              %li VDA research group
-              %li Faculty of Computer Science
-              %li University of Vienna
-              %li Währingerstrasse 29/3.34
-              %li 1090 Wien, Austria
+            = partial 'address'
 
             %hr
           -#%section
