--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -3,6 +3,11 @@ body > div.row:first-of-type {
   padding-top: 2em;
 }
 
+.address {
+  display:inline;
+  list-style: none;
+}
+
 .article-title {
   color: black;
 
