--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -2,21 +2,24 @@
 layout: page
 ---
 
-%div.panel
-  %h2 Research interests
+%section
+  %div.panel
+    %h2 Research interests
 
-  I am interested in using visualization techniques along with statistical
-  modeling in order to perform optimization in high-dimensional spaces.
+    I am interested in using visualization techniques along with statistical
+    modeling in order to perform optimization in high-dimensional spaces.
 
-  %ul
-    %li Visualization
-    %li Computer Graphics
-    %li Machine Learning
+    %ul
+      %li Visualization
+      %li Computer Graphics
+      %li Machine Learning
 
 
--#%h2 Research projects
--#= partial 'recent_research'
+%section
+  %h2 Projects
+  = partial 'featured_projects'
 
-%h2 Recent posts
-= partial 'article_shortlist', :locals => {:articles => page_articles[0, 5]}
+%section
+  %h2 Recent blog posts
+  = partial 'article_shortlist', :locals => {:articles => page_articles[0, 5]}
 
