--- a/source/_project_summary.haml
+++ b/source/_project_summary.haml
@@ -1,6 +1,6 @@
 
 %article.row
-  %div.large-3.columns
+  %div.large-3.columns.teaser
     - if proj.data.teaser
       = link_to image_tag(proj.data.teaser), proj
   %dev.large-9.columns
