--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -56,11 +56,7 @@ body > div.row:first-of-type {
 .selected-projects {
   @include block-grid(3);
   img {
-    padding: 1px;
-    border-style: $hr-border-style;
-    border-width: $hr-border-width;
-    border-color: $hr-border-color;
-    //background-color: #ff0;
+    @include thumb;
   }
 
   li {
@@ -79,6 +75,16 @@ body > div.row:first-of-type {
     display: inline;
   }
 
+}
+
+.teaser {
+  img {
+    @include thumb($box-shadow-hover: $thumb-box-shadow);
+  }
+
+  a img {
+    @include thumb;
+  }
 }
 
 .project-links {
