style the blog archive

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -13,6 +13,9 @@
 // Syntax highlighting
 @import "syntax";
 
+// The historical blog list stuff
+@import "blog_archive";
+
 // My custom stuff
 @import "custom";
 
