--- a/source/_article_shortlist.haml
+++ b/source/_article_shortlist.haml
@@ -1,7 +1,7 @@
 
-%ul
+%ul.blog-archive
   - articles.each do |article|
-    %li.archive_item
+    %li.archive-item
       = link_to article.title, article
       %time= article.date.strftime('%b %e, %Y')
     
