--- a/source/about.html.multimarkdown.erb
+++ b/source/about.html.multimarkdown.erb
@@ -5,7 +5,9 @@ layout: page
 
 # About me
 
-![](<%= lorem.image('720x325') %> "Me!")
+<p>
+  <%= image_tag 'me.jpg' %>
+</p>
 
 I am a PhD student at the University of Vienna in Austria.  I study how
 visualization and statistical methods can be used to help scientists
