--- a/source/stylesheets/_settings.scss
+++ b/source/stylesheets/_settings.scss
@@ -222,7 +222,7 @@ $paragraph-font-size: 1em;
 
 // $code-color: darken($alert-color, 15%);
 // $code-font-family: Consolas, 'Liberation Mono', Courier, monospace;
-// $code-font-weight: bold;
+$code-font-weight: normal;
 
 // Style anchors
 
