fixing the linenums for angular.js theme

--- a/source/stylesheets/_syntax.scss
+++ b/source/stylesheets/_syntax.scss
@@ -20,13 +20,14 @@ p {
   }
 }
 
-pre.prettyprint {
-
-  .linenums {
+pre.prettyprint.linenums {
     -webkit-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
     -moz-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
     box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
   }
+
+pre.prettyprint {
+
   /* Put a border around prettyprinted code snippets. */
   background-color: $code-bg-color;
   padding: 8px;
@@ -36,6 +37,7 @@ pre.prettyprint {
   /* Specify class=linenums on a pre to get line numbering */
   ol.linenums {
     margin: 0 0 0 33px; /* IE indents via margin-left */
+    padding: 0;
 
     li {
       padding-left: 12px;
