add autodiscovery link tag

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -13,6 +13,8 @@
         = " - "
       TomTorsneyWeir.com
   
+    %link{:rel=>"alternate", :type=>"application/atom+xml", 
+          :title=>"Tom Torsney-Weir's feed", :href=> "/feed.xml"}
     = stylesheet_link_tag 'site'
     = javascript_include_tag 'vendor/custom.modernizr'
     = javascript_include_tag 'vendor/jquery'
