use the responsive-nav plugin instead of foundation's button for nav

--- a/source/_site_nav.haml
+++ b/source/_site_nav.haml
@@ -4,16 +4,12 @@
            ['Blog', '/blog'], 
            ['CV', '/cv.html']]
 
+%div#menu-toggle
+  %i.fa.fa-bars
+  Menu
+
 %nav.site-nav
-  %div.hide-for-medium-up
-    %button.menu-button{'data-dropdown' => "main-menu-button"}
-      Links
-      %i.fa.fa-bars
-    %ul#main-menu-button.right.menu.f-dropdown
-      - links.each do |name, link|
-        %li= link_to name, link
-  %div.hide-for-small
-    %ul#main-menu-list.menu
-      - links.each do |name, link|
-        %li= link_to name, link
+  %ul#main-menu-list.menu
+    - links.each do |name, link|
+      %li= link_to name, link
 
