--- a/source/layout.haml
+++ b/source/layout.haml
@@ -19,7 +19,7 @@
     = javascript_include_tag 'vendor/custom.modernizr'
     = javascript_include_tag 'vendor/jquery'
     = javascript_include_tag 'foundation/foundation'
-    = javascript_include_tag 'foundation/foundation.dropdown'
+    -#= javascript_include_tag 'foundation/foundation.dropdown'
 
     = stylesheet_link_tag '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'
 
@@ -28,6 +28,9 @@
 
     = javascript_include_tag 'vendor/prettify.js/prettify'
     = javascript_include_tag 'code-highlight'
+
+    = javascript_include_tag 'vendor/responsive-nav'
+    = javascript_include_tag 'site-nav'
 
   %body
 
